test: Upgrade the test suite to use the latest versions